# embedlua

./: README.md
src/: .gitignore
src/engine/: .gitignore  CMakeLists.txt  main.cpp
src/engine/objects/: basic.json
src/engine/scripts/: definitions.lua  entity1.lua  system.lua
src/engine/src/: entity.h  entity_manager.cpp  entity_manager.h  entity_model.h  logger.cpp  logger.h  lua_method.h  lua_value.h  method_bindings.cpp  method_bindings.h  method_input_builder.h  script_manager.cpp  script_manager.h  service_base.h  services.cpp  services.h  util.cpp  util.h
src/host/: .gitignore  CMakeLists.txt  build.bat  entity.h  main.c  main.cpp  main_old.cpp  utils.h
src/host/debug/: first.lua
src/host/framework/: GameInstance.cpp  GameInstance.h  GameObject.cpp  GameObjectDef.cpp  GameObjectDef.h  GameObjectFactory.cpp  GameObjectFactory.h  JsonUtils.cpp  JsonUtils.h  Keyboard.h  Logger.cpp  Lookup.cpp  Lookup.h  Map.cpp  Map.h  MapCell.h  Player.cpp  Player.h  Rectangle.h  ScriptManager.cpp  ScriptManager.h  ServiceManager.cpp  ServiceManager.h  Utils.cpp  Utils.h  Vector2.h  entity.h  entity_factory.h  game.cpp  game.h  gameobject.h  logger.h  player.h  vector3.h
src/host/framework_old/: game.cpp  game.h  game_state.h  gameobject.h  gameobject_factory.h  logger.h  map.h  player.h  vector3.h
src/host/lib/json/: jsoncpp.cpp
